add missing top level pages and .gitignore

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,7 +43,7 @@
               <li><a
                   href="http://docs.qgis.org/2.14/en/docs/pyqgis_developer_cookbook/communicating.html#logging">Logging</a></li>
             </ol>
-            <li>Plugins</li>
+            <li><a href="./plugins">Plugins</a></li>
             <ol>
               <li><a
                   href="https://astuntechnology.github.io/qgis-tutorials/html/en/docs/building_a_python_plugin.html">Creating a simple plugin</a></li>
