updated to end of custom funcs

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,8 +18,8 @@
           <ol>
             <li><a href="./introduction">An Introduction to Python</a></li>
             <li><a href="./introduction2">An Introduction to PyQGIS</a></li>
-            <li><a href="./console">Using the QGIS Python console</a></li>
-            <li><a href="./expressions">Custom Python Expression Functions</a></li>
+            <li><a href="./getting_started_with_pyqgis">Using the QGIS Python console</a></li>
+            <li><a href="./python_expressions">Custom Python Expression Functions</a></li>
             <li><a href="./exploring">Exploring the PyQGIS API</a></li>
             <li><a href="./plugins">Plugins</a></li>
             <li><a href="./reference">Reference Materials</a></li>
